
// Copyright 2020 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.arc;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/arc";

// UreadaheadPackService provides ureadahead pack generation
service UreadaheadPackService {
  // Generate generates ureadahead pack for requested Chrome login mode, initial or provisioned.
  rpc Generate (UreadaheadPackRequest) returns (UreadaheadPackResponse) {}
  // CheckMinMemory verifies total memory meets minimum requirement to generate ureadahead pack.
  rpc CheckMinMemory (google.protobuf.Empty) returns (CheckMinMemoryResponse) {}
}

message UreadaheadPackRequest {
  reserved 1, 2, 3, 4;
  // Credentials to perform login
  string creds = 5;
}

message UreadaheadPackResponse {
  // Path to generated ureadahead pack.
  string pack_path = 1;
  // Path to vm generated ureadahead pack.
  string vm_pack_path = 2;
  // Path to log for ureadahead pack generation.
  string log_path = 3;
}

message CheckMinMemoryResponse {
  // Returns true if memory requirement is met, otherwise false.
  bool result = 1;
}
